<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Error -->
    <LinearLayout
        android:id="@+id/llError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_friends_not_loaded"/>

        <TextView
            android:id="@+id/tvRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/retry"
            android:textColor="@color/accent"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Permission Box -->
    <LinearLayout
        android:id="@+id/llPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <net.steamcrafted.materialiconlib.MaterialIconView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="center"
                app:materialIcon="alert"
                app:materialIconColor="@color/warning"
                app:materialIconSize="36dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="@string/permission_contacts_message"
                android:textColor="@color/text_subtitle"
                android:textSize="12sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>
    </LinearLayout>

    <!-- Friend and Contacts -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_facebook_friends"
            android:textColor="@color/text_subtitle"
            android:textSize="16sp"
            android:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvFriends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </RelativeLayout>

    <!-- Invite Button -->
    <RelativeLayout
        android:id="@+id/rlInvite"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">

        <View
            android:id="@+id/ivShadow"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/bottombar_shadow"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInvite"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Invite"/>

            <TextView
                android:id="@+id/tvInviteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/bg_invite_count"
                android:paddingBottom="2dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="2dp"
                android:text="7"
                android:textColor="@color/text_title_inverse"
                android:textSize="12sp"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>